syntax = "proto3";

package comment;

option go_package = "/";

service CommentService {
    rpc GetAllUsers(GetAllCommentsRequest) returns (GetAllCommentsResponse);
    rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse);
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);

    rpc CreateComment(Comment) returns (Comment);
    rpc UpdateComment(Comment) returns (Comment);
    rpc DeleteComment(IdRequst) returns (DeleteResponse);
    rpc GetComment(IdRequst) returns (Comment);
    rpc GetAllComment(GetAllCommentsRequest) returns (GetAllCommentResponse);

    rpc GetCommentsByPostId(IdRequst) returns (GetAllCommentResponse);
    rpc GetCommentsByOwnerId(IdRequst) returns (GetAllCommentResponse);
    rpc GetCommentById(IdRequst) returns (Comment);
}

message DeleteResponse {}

message GetAllCommentResponse {
    repeated Comment all_comments = 1;
}

message IdRequst {
    string id = 1;
}

message GetAllCommentsRequest {
    int64 page = 1;
    int64 limit = 2;
}

message GetAllCommentsResponse {
    repeated Users all_users = 1;
}

message GetPostByIdRequest {
    string post_id = 1;
}

message GetPostByIdResponse {
    Post post = 1;
    User post_writer = 2;
    repeated Comment comments = 3;
}

message GetUserByIdRequest {
    string owner_id = 1;
}

message GetUserByIdResponse {
    User owner_info = 1;
    repeated Posts all_posts = 2;
}

message Posts {
    string id = 1;
    string user_id = 2;
    string content = 3;
    string title = 4;
    int64 likes = 5;
    int64 dislikes = 6;
    int64 views = 7;
    string category = 8;
    string created_at = 9;
    string updated_at = 10;
    repeated Comments all_comments = 11;
}

message Comments {
    string id = 1;
    string content = 2;
    string post_id = 3;
    string owner_id = 4;
    string created_at = 5;
    string updated_at = 6;
    User comment_writer = 7;
}

message User {
    string id = 1;
    string name = 2;
    string last_name = 3;
    string username = 4;
    string email = 5;
    string bio = 6;
    string website = 7;
    string password = 8;
    string refresh_token = 9;
    string created_at = 10;
    string updated_at = 11;
}

message Users {
    string id = 1;
    string name = 2;
    string last_name = 3;
    string username = 4;
    string email = 5;
    string bio = 6;
    string website = 7;
    string password = 8;
    string refresh_token = 9;
    string created_at = 10;
    string updated_at = 11;
    repeated Posts all_posts = 12;
}

message Comment {
    string id = 1;
    string content = 2;
    string post_id = 3;
    string owner_id = 4;
    string created_at = 5;
    string updated_at = 6;
}

message Post {
    string id = 1;
    string user_id = 2;
    string content = 3;
    string title = 4;
    int64 likes = 5;
    int64 dislikes = 6;
    int64 views = 7;
    string category = 8;
    string created_at = 9;
    string updated_at = 10;
    repeated Comment all_comments = 11;
}